fixed live card skeleton overlapping

--- a/src/styles/footer-styles.css
+++ b/src/styles/footer-styles.css
@@ -8,7 +8,7 @@
   font-size: 8px;
   font-weight: 800;
   text-align: right;
-  /* z-index: 900; */
+  z-index: 900;
 }
 
 #footer-text{
