--- a/src/styles/live-card-skeleton-styles.css
+++ b/src/styles/live-card-skeleton-styles.css
@@ -1,5 +1,5 @@
 .live-stream-card-skeleton-container{
-  z-index: 900;
+  /* z-index: 900; */
   margin-top: 0px;
   padding-bottom: 30px;
 }
